Various fixes to use MinGW as host for cross-compiler

--- a/fixincludes/configure.ac
+++ b/fixincludes/configure.ac
@@ -52,6 +52,7 @@ fi],
 	i?86-*-msdosdjgpp* | \
 	i?86-*-mingw32* | \
 	x86_64-*-mingw32* | \
+	*-*-msys* | \
 	*-*-beos* | \
         *-*-*vms*)
 		TARGET=twoprocess
